--- a/index.html
+++ b/index.html
@@ -12,8 +12,75 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
+ 
 
 <body>
-  <h1>My Resume</h1>
+  <div class="main-container">
+    <header>
+      <nav>
+        <a href="#" class="nav-links home">Home</a>
+        <a href="#" class="nav-links about">About</a>
+        <a href="#" class="nav-links portfolio">Portfolio</a>
+        <a href="#" class="nav-links contact">Contact</a>
+      </nav>
+    </header>
+    <div class="intro-container">
+      <div class="img-and-contacts">
+        <img src="img/Profile.jpg" alt="" class="intro-img" />
+
+        <div class="contacts">
+          <p>Email:janelle.s.washington@gmail.com</p>
+          <p>Address: New York City</p>
+        </div>
+      </div>
+      <section class="name">
+        <h1>Janelle Washington| <span>Full-Stack Developer</span></h1>
+
+      </section>
+      <hr />
+      <section>
+        <p class="quote">
+          ...
+        </p>
+
+        <!-- <p class="btn">Saddle Up</p> -->
+      </section>
+    </div>
+    <main>
+      <section class="top-main">
+        <div class="summary top-cards">
+          <h2>About me...</h2>
+          <p>
+            I am a software engineer who helps clients meet their digital needs. 
+          </p>
+        </div>
+        <div class="talents top-cards">
+          <div class="talents-list">
+            <h2>Some of my skills:</h2>
+            <div class="list">
+              <p class="talent">Html | Css | less</p>
+              <p class="talent">JavaScript | React.js</p>
+              <p class="talent">Python</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="work-history">
+        <h2>Work History...</h2>
+        <div class="head">
+          <p class="head-data">Years:</p>
+          <p class="head-data">Company:</p>
+          <p class="head-data">Title:</p>
+          <p class="head-data">Skills Used:</p>
+      </div>
+      <div class="data">
+        <p class="years">3</p>
+        <p class="company-name">Accenture</p>
+        <p class="Title"> IT Consultant</p>
+        <p class="Skills">Html, CSS, Javascript</p>
+      </div>
+    </main>
+    <footer><p>Copyright &copy; Janelle Washington | 2019</p></footer>
+  </div>
 </body>
 </html>
